--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,17 +8,18 @@
 
     <TextView
         android:id="@+id/text_view1"
-        android:layout_width="235dp"
-        android:layout_height="112dp"
+        android:layout_width="330dp"
+        android:layout_height="107dp"
         android:fontFamily="@font/bangers"
         android:gravity="center"
         android:text="Enter the number of subscribers:"
-        android:textSize="16sp"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.506"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.05" />
+        app:layout_constraintVertical_bias="0.588" />
 
     <EditText
         android:id="@+id/editText"
@@ -55,5 +56,16 @@
         app:layout_constraintEnd_toEndOf="@+id/text_view1"
         app:layout_constraintStart_toStartOf="@+id/text_view1"
         app:layout_constraintTop_toBottomOf="@+id/text_view2" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
+        android:layout_marginBottom="24dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/text_view1"
+        app:layout_constraintEnd_toEndOf="@+id/text_view1"
+        app:layout_constraintStart_toStartOf="@+id/text_view1"
+        app:srcCompat="@drawable/img2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
